# ai-content-studio

./: .gitignore  README.md  docker-compose.yml  nginx.alphaos.conf  package.json
.github/workflows/: compile-video.yml  deploy-oracle.yml
apps/alphaos/: README.md  index.html  manifest.json  sw.js
apps/videostudio/: Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  index.html  manifest.json  pyproject.toml  sw.js
apps/videostudio/api/: index.py
apps/videostudio/app/: auth.py  config.py  database.py  main.py  supabase_client.py
apps/videostudio/app/api/v1/: projects.py  videos.py
apps/videostudio/app/models/: __init__.py
apps/videostudio/app/schemas/: progress.py  scene.py  video.py
apps/videostudio/app/services/: deepl_translator.py  elevenlabs.py  image_generator.py  llm_providers.py  pexels_media.py  progress.py  script_generator.py  text_to_speech.py  video_compiler.py  webhook.py  whisper_stt.py
apps/videostudio/app/utils/: file_utils.py  validators.py
apps/videostudio/app/workers/: celery_app.py  tasks.py
apps/videostudio/migrations/: env.py
apps/videostudio/tests/test_api/: test_projects.py  test_videos.py
apps/videostudio/tests/test_services/: test_script_generator.py  test_subtitle_generator.py
backend/: .gitignore  .vercelignore  Dockerfile  Makefile  nixpacks.toml  pyproject.toml  start.sh  vercel.json
backend/app/: auth.py  config.py  database.py  main.py  (+2 more)
nginx/: nginx.conf
scripts/: setup-secrets.sh  setup-vm.sh
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
(+62 files in other folders)
