[project]
name = "sistema-video-ai-automatico"
version = "0.1.0"
description = "Sistema automatico per la generazione di video con AI (tutto gratuito/open-source)"
authors = []
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "mangum==0.19.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "aiosqlite==0.20.0",
    "asyncpg==0.30.0",
    "celery==5.4.0",
    "redis==5.2.1",
    "gTTS==2.5.4",
    "pyttsx3==2.98",
    "moviepy==2.1.1",
    "Pillow>=9.2,<11.0",
    "opencv-python-headless>=4.10,<4.12",
    "srt==3.5.3",
    "PyJWT==2.9.0",
    "cryptography==43.0.3",
    "httpx==0.28.1",
    "python-multipart==0.0.19",
    "python-dotenv==1.0.1",
    "loguru==0.7.3",
    "numpy>=1.24",
    "soundfile>=0.12",
    "deep-translator>=1.11",
]

[project.scripts]
video-ai = "app.main:run"
video-worker = "app.workers.celery_app:run_worker"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
